--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">영화URL</label>
         </div>
+        <div class="input-group mb-5">
+            <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>별점 선택하기</option>
+                <option value="1">1점⭐</option>
+                <option value="2">2점⭐⭐</option>
+                <option value="3">3점⭐⭐⭐</option>
+                <option value="4">4점⭐⭐⭐⭐</option>
+                <option value="5">5점⭐⭐⭐⭐⭐</option>
+            </select>
+        </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                 style="height: 100px"></textarea>
@@ -163,18 +174,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
-                    <img src="https://asianwiki.com/images/e/e5/The_Glory-p2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">더글로리(The Glory)</h5>
-                        <p class="card-text">2022년작/관람등급15+/넷플릭스</p>
-                        <p>⭐⭐⭐⭐⭐</p>
-                        <p class="mycomment">평소 학폭물을 좋아하지 않는 시드니도어는 유행에 이끌려 시청하게 되었고 이내 감탄을 멈출 수 없었다. 이렇게 섬세하고 아름다운
-                            대사라니.. 이렇게 통쾌하고 가슴 저리는 이야기라니..</p>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 </body>
