--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         <h5 class="card-title">나의 아저씨(My Mister)</h5>
                         <p class="card-text">2018년작/관람등급15+/넷플릭스</p>
                         <p>⭐⭐⭐⭐⭐</p>
-                        <p class="mycomment">시드니도어가 고등학교를 졸업하고 인생 처음으로 완주한 드라마이자 최애 드라마.
-                            여러모로 뾰족해졌던 도어를 웃고 울게 해주며 마음을 보듬어주었던 최고의 힐링 드라마이다.
+                        <p class="mycomment">내가 고등학교를 졸업하고 인생 처음으로 완주한 드라마이자 최애 드라마.
+                            여러모로 뾰족해졌던 나를 웃고 울게 해주며 마음을 보듬어주었던 최고의 힐링 드라마다.
                         </p>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <h5 class="card-title">Harry Potter and the Half-Blood Prince</h5>
                         <p class="card-text">2009년작/관람등급12+/웨이브</p>
                         <p>⭐⭐⭐⭐⭐</p>
-                        <p class="mycomment">시드니도어의 어린 시절과 청소년기를 지배했던 희대의 걸작 "해리포터". 그중 시리즈 세계관의 두 주축이 되는 덤블도어와 스네이프를
+                        <p class="mycomment">나의 어린 시절과 청소년기를 지배했던 희대의 걸작 "해리포터". 그중 시리즈 세계관의 두 주축이 되는 덤블도어와 스네이프를
                             사랑한다면 고민없이 이 영화가 시리즈 통틀어 최애일 수 밖에 없다.</p>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                         <h5 class="card-title">더글로리(The Glory)</h5>
                         <p class="card-text">2022년작/관람등급15+/넷플릭스</p>
                         <p>⭐⭐⭐⭐⭐</p>
-                        <p class="mycomment">평소 학폭물을 좋아하지 않는 시드니도어는 유행에 이끌려 시청하게 되었고 이내 감탄을 멈출 수 없었다. 이렇게 섬세하고 아름다운
+                        <p class="mycomment">평소 학폭물을 좋아하지 않는 나는 유행에 이끌려 시청하게 되었고 이내 감탄을 멈출 수 없었다. 이렇게 섬세하고 아름다운
                             대사라니.. 이렇게 통쾌하고 가슴 저리는 이야기라니..</p>
                     </div>
                 </div>
